Fixed colors in dark mode

--- a/webapp/src/theme/variables.css
+++ b/webapp/src/theme/variables.css
@@ -74,12 +74,12 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary: #eb4040;
+    --ion-color-primary-rgb: 235,64,64;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #cf3838;
+    --ion-color-primary-tint: #ed5353;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80,200,255;
